# minecraft-demo

./: .gitignore  README.md  api.md  pyproject.toml  setup.py
VereyaPython/: .pylintrc  .timestamped_video_frame.py.swp  __init__.py  agent_host.py  argument_parser.py  client_connection.py  client_info.py  consts.py  mission_ended_xml.py  mission_exception.py  mission_init_spec.py  mission_init_xml.py  mission_record.py  mission_record_spec.py  mission_spec.py  reward_xml.py  rpc.py  string_server.py  tcp_server.py  timestamped_reward.py  timestamped_string.py  timestamped_unsigned_char_vector.py  timestamped_video_frame.py  video_server.py  world_state.py  xml_util.py
examples/: 0_missionxml.py  10_explorer_logger.py  1_startandwait.py  2_observe.py  3_command.py  4_mine_and_craft.py  5_lumberjack3D.py  5_mine_and_craft_with_a_pinch_of_rl_skills.py  6_achiever.py  6_get_blocks_hue_stats_from_user.py  7_explorer.py  8_draw.py  8_manyagents.py  8_manyagents1.py  9_connect.py  agent.py  cliffwalking.py  cliffwalking_copy.py  common.py  dataset_processing_test.py  discrete_movement.py  get_recipes_from_minecraft_data.py  goal.py  item_list_to_craft.py  item_list_to_mine.py  knowledge_lists.py  log.py  minelogy.py  neural.py  show_maps.py  skills.py  vis.py
experiments/: README.md  agent.pth  agent_tree.pth  b_tree.py  behaviours.py  block_type_classification_by_good_point.py  cliff.py  cliff_v1.py  cliff_v2.py  cliff_v3.py  collect_data.py  common.py  dataset.py  dig_v1.py  find_mountain.py  get_blocks_hue_stats_from_user.py  get_recipes_from_minecraft_data.py  log.py  (+20 more)
(+96 files in other folders)
