[project]
name = "tagilmo"
version = "0.0.2"
authors = [
  { name="Alexey Potapov", email="alexey@singularitynet.io" },
  { name="Anatoly Belikov", email="abelikov@singularitynet.io" },
]
description = "TrueAGI minecraft api"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trueagi-io/minecraft-demo"
"Bug Tracker" = "https://github.com/trueagi-io/minecraft-demo/issues"

[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"
